k8s/3tier-app/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
  labels:
    name: app-prod
    environment: production
